--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
         <meta property="og:type" content="website">
         <meta property="og:title" content="Victoria Ashworth | Web Designer & Developer for Hire in Carlsbad, CA or Remote">
         <meta property="og:url" content="https://www.victoriaash.com">
-        <meta property="og:image" content="/images/logogold.png">
+        <meta property="og:image" content="https://www.victoriaash.com/images/logogold.png">
         <meta property="og:description" content="Victoria Ashworth is a freshly graduated full stack web developer and designer searching for work in Carlsbad, CA or remote.">
         <meta property="og:site_name" content="Victoria Nishimoto Ashworth">
         <meta name="keywords" content="Full Stack, Web, Developer, Designer, Graduated, For hire, Carlsbad, CA, Remote">
@@ -41,7 +41,11 @@
 
     <body>
         <canvas id="canvas">
-            <img id="canvas-backup" class="img-fluid" src="/images/canvas-backup.jpg">
+            <picture>
+                <source srcset="/images/canvas-backup-min.webp" type="image/webp">
+                <source srcset="/images/canvas-backup-min.jpg" type="image/jpeg">
+                <img id="canvas-backup" class="img-fluid" src="/images/canvas-backup-min.jpg" alt="HTML Canvas backup image of starry sky">
+            </picture>
         </canvas>
         <section id="intro" class="h-110">
             <div class="container-fluid h-110">
@@ -97,7 +101,11 @@
                         <!-- TODO: add download resume -->
                     </div>
                     <div class="col-12 col-sm-4">
-                        <img class="img-fluid" src="/images/butterflies-rising.jpg" alt="Why else are we here if not to have unreasonable passion for things?">
+                        <picture>
+                            <source srcset="/images/butterflies-rising.webp" type="image/webp">
+                            <source srcset="/images/butterflies-rising-min.jpg" type="image/jpeg">
+                            <img class="img-fluid" src="/images/butterflies-rising-min.jpg" alt="Why else are we here if not to have unreasonable passion for things?">
+                        </picture>
                     </div>
                 </div>
             </div>
@@ -151,7 +159,11 @@
                                     <h4>Freelancer</h4>
                                     <div class="row mb-2">
                                         <div class="col-2">
-                                            <img class="img-fluid" src="/images/vash.png" alt="Victoria Ashworth logo">
+                                            <picture>
+                                                <source srcset="/images/vash.webp" type="image/webp">
+                                                <source srcset="/images/vash.jpg" type="image/jpeg">
+                                                <img class="img-fluid" src="/images/vash.jpg" alt="Victoria Ashworth logo">
+                                            </picture>
                                         </div>
                                         <div class="col-10">
                                             <p class="text-muted mb-0">Jun 2017 - Present</p>
@@ -167,7 +179,11 @@
                                     <h4>Advanced Web Developer</h4>
                                     <div class="row mb-2">
                                         <div class="col-2">
-                                            <img class="img-fluid" src="/images/byu_medallion.svg" alt="Graduated and worked at BYU">
+                                            <picture>
+                                                <source srcset="/images/byu_medallion.webp" type="image/webp">
+                                                <source srcset="/images/byu_medallion.jpg" type="image/jpeg">
+                                                <img class="img-fluid" src="/images/byu_medallion.jpg" alt="Graduated and worked at BYU">
+                                            </picture>
                                         </div>
                                         <div class="col-10">
                                             <p class="mb-0">Brigham Young University</p>
@@ -188,7 +204,12 @@
                                     <h4>Business Technology Intern</h4>
                                     <div class="row mb-2">
                                         <div class="col-2">
-                                            <img class="img-fluid" src="/images/discover.jpg" alt="Internship at Discover Financial Services">
+
+                                            <picture>
+                                                <source srcset="/images/discover.webp" type="image/webp">
+                                                <source srcset="/images/discover.jpg" type="image/jpeg">
+                                                <img class="img-fluid" src="/images/discover.jpg" alt="Internship at Discover Financial Services">
+                                            </picture>
                                         </div>
                                         <div class="col-10">
                                             <p class="mb-0">Discover Financial Services</p>
@@ -209,7 +230,11 @@
                                     <h4>Teaching Assistant</h4>
                                     <div class="row mb-2">
                                         <div class="col-2">
-                                            <img class="img-fluid" src="/images/byu_medallion.svg" alt="Graduated and worked at BYU">
+                                            <picture>
+                                                <source srcset="/images/byu_medallion.webp" type="image/webp">
+                                                <source srcset="/images/byu_medallion.jpg" type="image/jpeg">
+                                                <img class="img-fluid" src="/images/byu_medallion.jpg" alt="Graduated and worked at BYU">
+                                            </picture>
                                         </div>
                                         <div class="col-10">
                                             <p class="mb-0">Brigham Young University</p>
@@ -240,7 +265,11 @@
                     <div class="col-12 col-sm-6">
                         <div class="card mb-3">
                             <a href="https://www.feetnw.com/" target="_blank">
-                                <img src="/images/nwfas.png" class="card-img" alt="Custom web design and development by Victoria Ashworth for small business">
+                                <picture>
+                                    <source srcset="/images/nwfas-min.webp" type="image/webp">
+                                    <source srcset="/images/nwfas-min.jpg" type="image/jpeg">
+                                    <img class="card-img" src="/images/nwfas-min.jpg" alt="Custom web design and development by Victoria Ashworth for small business">
+                                </picture>
                             </a>
                             <div class="card-body">
                                 <a href="https://www.feetnw.com/" target="_blank">
@@ -253,7 +282,11 @@
                     <div class="col-12 col-sm-6">
                         <div class="card mb-3">
                             <a href="https://is415-project.herokuapp.com/" target="_blank">
-                                <img src="/images/lol-recommender.png" class="card-img" alt="Custom web design and development by Victoria Ashworth">
+                                <picture>
+                                    <source srcset="/images/lol-recommender-min.webp" type="image/webp">
+                                    <source srcset="/images/lol-recommender-min.jpg" type="image/jpeg">
+                                    <img class="card-img" src="/images/lol-recommender-min.jpg" alt="Custom web design and development by Victoria Ashworth">
+                                </picture>
                             </a>
 
                             <div class="card-body">
@@ -381,6 +414,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="/javascripts/modernizr-custom.js"></script>
         <script src="/javascripts/main.js"></script>
         <script src="/javascripts/stars.js"></script>
         <script>
