remove form for now

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -200,7 +200,7 @@
                                         </div>
                                     </div>
                                     <ul>
-                                        <li>Managed and participated in design and development of custom advisement system using Drupal CMS</li>
+                                        <li>Managed and participated in the design and development of custom advisement system using Drupal CMS</li>
                                         <li>Developed multiple custom modules and themes for various Drupal projects</li>
                                         <li>Trained new employees on principles of views, content types, taxonomy, twig templates, etc.</li>
                                     </ul>
@@ -388,8 +388,8 @@
                 <h2 class="py-3 section-title"><span>Contact Me</span></h2>
                 <div class="row">
                     <div class="col">
-                        <p>Send me an email at <a href = "mailto: mail@victoriaash.com">mail@victoriaash.com</a> or leave a message below!</p>
-                        <form method="POST" action="/send_email">
+                        <p>Send me an email at <a href = "mailto: mail@victoriaash.com">mail@victoriaash.com</a></p> <!-- or leave a message below! -->
+                        <!-- <form method="POST" action="/send_email">
                             <div class="form-row">
                                 <div class="form-group col-md-6">
                                     <label for="name">Name</label>
@@ -409,7 +409,7 @@
                                 <textarea class="form-control" name="message" rows="3"></textarea>
                             </div>
                             <button type="submit" class="btn btn-primary">Send</button>
-                        </form>
+                        </form> -->
                     </div>
                 </div>
             </div>
